# cheroki

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  JOURNAL.md  LICENSE  README.md  START_GUIDE.md  claude-progress.txt  config.yaml.example  docker-compose.yml  features.json  pyproject.toml
dictionary/: default.yaml
docs/: CONCEPTS.md  DEPLOY.md  JOURNAL.md  PLAN_v3.md  SETUP.md
scripts/: announce.py  compare_providers.py
src/cheroki/: __init__.py  ai_reviewer.py  cli.py  config.py  corpus.py  corrector.py  dataset.py  diarizer.py  dictionary.py  exporter.py  learner.py  metadata.py  migrate.py  naming.py  pipeline.py  reviewer.py  siltarae.py  storage.py  telegram_bot.py  transcriber.py  transcript_store.py  watcher.py  web.py
src/cheroki/core/: __init__.py  exporter.py  result.py  transcribe.py  types.py
src/cheroki/core/transcribers/: __init__.py  base.py  deepgram.py  scribe.py
src/cheroki/interfaces/: cli.py
src/cheroki/interfaces/telegram/: __main__.py  bot.py  formatters.py  handlers.py
src/cheroki/storage/: __init__.py  base.py  fs_store.py  ids.py  sqlite_store.py
src/cheroki/templates/: index.html
src/tests/: test_cli.py  test_cli_export.py  test_cli_review.py  test_config.py  test_corpus.py  test_corrector.py  test_dataset.py  test_diarizer.py  test_dictionary.py  test_exporter.py  test_exporter_integration.py  test_learner.py  test_metadata.py  test_reviewer.py  test_siltarae.py  test_storage.py  test_telegram_bot.py  test_transcriber.py  test_transcript_store.py  test_watcher.py  test_web.py
tests/: conftest.py  test_deepgram_parsing.py  test_exporter.py  test_ids.py  test_naming.py  test_result.py  test_scribe_parsing.py  test_storage.py  test_transcribe_default.py
