[project]
name = "cheroki"
version = "0.1.0"
description = "採錄. 한국어 음성을 화자분리된 텍스트로 변환하는 Python 모듈 + Telegram 봇"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Hahnryu" },
]
dependencies = [
    "aiogram>=3.4.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "unidecode>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.scripts]
cheroki = "cheroki.interfaces.cli:main"
cheroki-bot = "cheroki.interfaces.telegram.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cheroki"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]
